 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/07/02:
   * Remember original size/position in apps file for shaded or maximized
     windows (Mark)
     Remember.cc Window.cc/hh FbWinFrame.cc/hh
   * Enabled Xinerama and Imlib2 support by default (Mark)
     configure.in
   * Fixed handle rendering when switching from a style without them (Mark)
     FbWinFrame.cc
   * Changed :Tab <int> key command so that the last tab is focused if <int> is
     larger than the number of tabs (or first if <int> is negative and |<int>|
     is too large) (Mark)
     CurrentWindowCmd.cc
   * Fixed some rendering problems when toolbar item borderwidth is too large
     and toolbar bevelwidth is set (Mark)
     Toolbar.cc
   * Moved the `Transparency' submenu next to the rest of the submenus (Mark)
     Screen.cc
*07/07/01:
   * Added keycommands :AddWorkspace and :RemoveLastWorkspace (Mark)
     WorkspaceCmd.cc/hh FbCommandFactory.cc
   * More fixes for _NET_WM_STATE_MODAL and _NET_WM_STATE_DEMANDS_ATTENTION,
     plus a minor fix for pixmap styles (Mark)
     Ewmh.cc Window.cc AttentionNoticeHandler.cc/hh WinClient.cc
     WinButtonTheme.cc
*07/06/30:
   * Fixed implementation of _NET_WM_STATE_MODAL (Mark)
     Ewmh.cc/hh WinClient.cc/hh Window.cc
   * Fixed the groups file, even though it's deprecated (Mark)
     Workspace.cc Screen.cc
   * Fix _NET_WM_STATE_DEMANDS_ATTENTION with tabbed windows, #1732392 (Mark)
     Ewmh.cc/hh
*07/06/29:
   * Updates for compiling with gcc 4.3 (thanks Dmitry E. Oboukhov)
*07/06/28:
   * Strip off additional bits in event state set by Xorg, bug #1736252 (Mark)
     FbTk/KeyUtil.hh
   * Added some missing Open Office entries and window managers, plus some other
     minor changes in fluxbox-generate_menu
     fluxbox-generate_menu.in
*07/06/16:
   * Fixed compile error with --disable-remember (Mark)
     Window.cc/hh Remember.cc/hh
*07/06/09:
   * Minor change to the /bin/sh - solution (Mathias)
     we are using now just $SHELL -c <line_here>